--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,15 +43,26 @@ dependencies {
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-database-ktx'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1"
+
+    implementation 'androidx.fragment:fragment-ktx:1.5.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore:24.2.0'
-    implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
 
     //swipe refresh layout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
@@ -60,6 +71,8 @@ dependencies {
 
     //country code picker
     implementation 'com.hbb20:ccp:2.6.0'
+
+    implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 
     //phone hint
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
