--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.noice.dextro">
+    package="com.noice.dextro" >
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,10 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dextro">
+        android:theme="@style/Theme.Dextro" >
         <activity
-            android:name=".ui.auth.SignUpActivity"
-            android:exported="true" >
+            android:name=".ui.SplashActivity"
+            android:exported="true"
+            android:theme="@style/splashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,15 +24,18 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.auth.SignUpActivity"
+            android:exported="true" >
+        </activity>
+        <activity
             android:name=".ui.auth.VerifyOtpActivity"
             android:exported="false" />
         <activity
             android:name=".ui.auth.LoginActivity"
-            android:exported="true">
-
+            android:exported="true" >
         </activity>
         <activity
-            android:name=".ui.auth.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="true" />
     </application>
 
