--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     }
     buildFeatures{
         dataBinding true
+        viewBinding true
     }
 }
 
@@ -56,11 +57,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
 
@@ -76,4 +80,13 @@ dependencies {
 
     //phone hint
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+    implementation "com.vanniktech:emoji-google:0.15.0"
+
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.0.0'
+
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    // Use: def instead of val if you are not using Kotlin Gradle(.kts)
+
+    implementation "androidx.core:core-splashscreen:1.0.0-rc01"
 }
