--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.noice.dextro" >
+    package="com.noice.dextro">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ui.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Dextro" >
+        android:theme="@style/Theme.Dextro">
         <activity
-            android:name=".ui.SplashActivity"
-            android:exported="true"
-            android:theme="@style/splashTheme">
+            android:name=".ui.main.ChatActivity"
+            android:exported="false"
+            android:label="@string/title_activity_chat"
+            android:theme="@style/Theme.Dextro.NoActionBar" />
+        <activity
+            android:name=".ui.auth.SignUpActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.auth.VerifyOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.auth.LoginActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,19 +35,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.auth.SignUpActivity"
-            android:exported="true" >
-        </activity>
-        <activity
-            android:name=".ui.auth.VerifyOtpActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.auth.LoginActivity"
-            android:exported="true" >
-        </activity>
-        <activity
             android:name=".ui.main.MainActivity"
-            android:exported="true" />
+            android:exported="true" >
+        </activity>
     </application>
 
 </manifest>
