--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,14 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+        /*sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8*/
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11.toString()
+        //jvmTarget = '1.8'
     }
     buildFeatures{
         dataBinding true
@@ -74,7 +77,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     //country code picker
-    implementation 'com.hbb20:ccp:2.6.0'
+    implementation 'com.hbb20:ccp:2.6.1'
 
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
 
@@ -89,4 +92,7 @@ dependencies {
     // Use: def instead of val if you are not using Kotlin Gradle(.kts)
 
     implementation "androidx.core:core-splashscreen:1.0.0-rc01"
+
+    implementation 'com.github.CanHub:Android-Image-Cropper:3.2.1'
+
 }
